--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,14 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.6.0",
+    "com.unity.ext.nunit": "2.0.5",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.ide.rider": "3.0.28",
+    "com.unity.ide.vscode": "1.2.1",
+    "com.unity.postprocessing": "3.4.0",
+    "com.unity.recorder": "5.0.0",
+    "com.unity.test-framework": "1.3.9",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.8.0",
